--- a/k8s-spring-boot-deployment.yml
+++ b/k8s-spring-boot-deployment.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: springboot
-          image: rahulwagh17/jhooq-docker-demo:jhooq-docker-demo
+          image: pramodpunnuche28april/my-hub:springboot-docker-demo
           ports:
             - containerPort: 8080
           env:
